[package]
name = "grpc-examples"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
doctest = false
test = false

[dependencies.grpc]
path = "../grpc"

[dependencies]
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = { git = "https://github.com/valarauca/rust-tls-api" }
httpbis         = { git = "https://github.com/valarauca/rust-http2", branch = "shiftleft-internal" }

[build-dependencies]
protoc-rust-grpc = { path = "../protoc-rust-grpc" }

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_client_multi"
test = false

[[bin]]
name = "greeter_server"
test = false

[[bin]]
name = "greeter_server_multi_server"
test = false
